[package]
name = "wechat-helper-rs"
version = "0.1.0"
authors = ["Zoe <hi@zoe.im>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winuser", "libloaderapi"] }